made the boxes smaller to fit more things, might shrink it a bit more

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="ov_box_container" id="month_stats_box_container">
             <div class="stats_container">
                 <h1 id="stats_text">Month Statistics</h1>
-                <div id="line_month"></div>
             </div>
+            <div id="line_ov_box"></div>
             <div class="inc_exp_box_container" id="month_inc_exp_box_container">
                 <!-- Income box -->
                 <div class="ov_box" id="month_inc_box">
@@ -82,8 +82,8 @@
         <div class="ov_box_container" id="year_stats_box_container">
             <div class="stats_container">
                 <h1 id="stats_text">Yearly Statistics</h1>
-                <div id="line_month"></div>
             </div>
+            <div id="line_ov_box"></div>
             <div class="inc_exp_box_container">
 
                 <!-- Income box -->
@@ -117,3 +117,11 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+<!-- to push -->
+<!-- 
+git add .
+git commit -m "your message here"
+git push 
+-->
