--- a/index.html
+++ b/index.html
@@ -113,8 +113,63 @@
             </div>
         </div>
     </div>
+
+    <div class="graph_container">
+        <canvas id="graph"></canvas>
+    </div>
+
     <!-- Javascript -->
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+
+    <script>
+        let categories = ["a", "b", "c", "d", "e"];
+
+        let numbers = [1, 3, 6, 5, 3];
+
+        let expensesjs = [3, 5, 1, 6, 4];
+
+        let netjs = numbers.map((value, index) => value - expensesjs[index]);
+
+        const thedata = {
+            labels: categories,
+            datasets: [{
+                label: 'Income',
+                data: numbers,
+                backgroundColor: 'rgb(66, 221, 245)',
+                borderColor: 'rgb(75, 192, 192, 0.5)'
+            },
+            {
+                label: 'Expenses',
+                data: expensesjs,
+                backgroundColor: 'rgb(245, 66, 90)',
+                borderColor: 'rgb(245, 66, 90, 0.5)'
+            },
+            {
+                label: 'Net',
+                data: netjs,
+                backgroundColor: 'rgb(153, 141, 142)',
+                borderColor: 'rgb(153, 141, 142)'
+            }]
+        }
+
+        const config = {
+            type: 'line',
+            data: thedata,
+            options: {
+                responsive: true,
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        }
+
+        const chart = new Chart(
+            document.getElementById('graph').getContext('2d'),
+            config
+        )
+    </script>
 </body>
 </html>
 
